[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "imbalanced-learn>=0.13.0",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "streamlit>=1.43.2",
    "xgboost>=3.0.0",
]
